# swiss-snb-mcp

./: CHANGELOG.md  CONTRIBUTING.md  EXAMPLES.md  LICENSE  README.de.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
assets/: DEMO_SCREENSHOT.md  demo.html
docs/superpowers/plans/: 2026-04-01-phase3-warehouse-implementation.md
docs/superpowers/specs/: 2026-04-01-phase3-warehouse-api-design.md
src/swiss_snb_mcp/: server.py  warehouse.py
tests/: test_scenarios.py  test_warehouse_scenarios.py
