[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swiss-snb-mcp"
version = "0.2.0"
description = "MCP server for Swiss National Bank (SNB) data portal — exchange rates, balance sheet, and monetary statistics"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/malkreide/swiss-snb-mcp"
Repository = "https://github.com/malkreide/swiss-snb-mcp"
Changelog = "https://github.com/malkreide/swiss-snb-mcp/blob/main/CHANGELOG.md"

[project.scripts]
swiss-snb-mcp = "swiss_snb_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/swiss_snb_mcp"]

[tool.hatch.build]
sources = ["src"]
